GNOME Bugzilla – Bug 770656
gdata: Query Google Drive in smaller chunks instead of getting everything all at once
Last modified: 2016-09-02 08:22:38 UTC
There can be a very large number of documents in a Google Drive. Getting all of them at once is not a good idea because there can be an upper bound on how long the response from the server can be. This is also what the GVfs backend does: https://git.gnome.org/browse/gvfs/tree/daemon/gvfsbackendgoogle.c#n539 I am not sure about the best error handling strategy. GVfs only treats the failure to get the first page as fatal. Failure to get any subsequent page terminates the operation but the failure is not reported to the caller. This is also what I have implemented, but I am open to better ideas.
Created attachment 334539 [details] [review] gdata: Consolidate the return sites
Created attachment 334540 [details] [review] gdata: Use a separate GError variable for local errors
Created attachment 334541 [details] [review] gdata: Page through the GDataDocumentsFeed
*** Bug 741472 has been marked as a duplicate of this bug. ***
*** Bug 733642 has been marked as a duplicate of this bug. ***
See the duplicate bug 733642 for concerns about performance and exceeding the server's response limit.
I have pushed these to master so that I can release 3.20.1. Let me know if I have missed something.