gdata: Consolidate the return sites

This will make it easier to add paged queries.

https://bugzilla.gnome.org/show_bug.cgi?id=770656